Scene - Full Copy Bug? #38269

Closed
opened 2014-01-18 10:41:43 +01:00 by Terry Wallwork · 7 comments

System Information
Operating system and graphics card

Blender Version
Broken: (example: 2.69.7 4b206af, see splash screen)
Worked: (optional)

Short description of error

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

I am using Bender GIT REV 2014-01-18-09-13-51-96e9c67
on a Fedora 20 Linux 64Bit Box with an Intel 3000HD gfx card.

I noticed what may be a bug when using Blenders Scene Full Copy
feature.

I have attached a blend file that I tested with. It consists of a scene
named S1, which has a single plane in Edit Mode with all it's vertices
selected.

If I activate loop cut on the plane and set up 5 horizontal loopcuts
by doing:

  
  CTRL+R
  Enter value 5
  Press ENTER key twice (to complete loop cuting)
  

I end up with a plane that has the new loop cuts which are selected
and are displayed in Edit Mode.

If now goto the Add New Scene by Type + button in the Info Editor Header
click it and select Full Copy, the copied over plane in the new scene
has lost the loop cuts.

I have attached the blend file and my system-info.txt file.

system-info.txt

Scene-FullyCopy_(Bug_).blend

  
**System Information** Operating system and graphics card **Blender Version** Broken: (example: 2.69.7 4b206af, see splash screen) Worked: (optional) **Short description of error** **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps I am using Bender GIT REV 2014-01-18-09-13-51-96e9c67 on a Fedora 20 Linux 64Bit Box with an Intel 3000HD gfx card. I noticed what may be a bug when using Blenders Scene Full Copy feature. I have attached a blend file that I tested with. It consists of a scene named S1, which has a single plane in Edit Mode with all it's vertices selected. If I activate loop cut on the plane and set up 5 horizontal loopcuts by doing: ``` CTRL+R Enter value 5 Press ENTER key twice (to complete loop cuting) ``` I end up with a plane that has the new loop cuts which are selected and are displayed in Edit Mode. If now goto the Add New Scene by Type + button in the Info Editor Header click it and select Full Copy, the copied over plane in the new scene has lost the loop cuts. I have attached the blend file and my system-info.txt file. [system-info.txt](https://archive.blender.org/developer/F70189/system-info.txt) [Scene-FullyCopy_(Bug_).blend](https://archive.blender.org/developer/F70191/Scene-FullyCopy__Bug__.blend) ```
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @TerryWallwork-1

Added subscriber: @TerryWallwork-1
Author

Added a video demonstrating:

SceneFullCopyBug.webm

Added a video demonstrating: [SceneFullCopyBug.webm](https://archive.blender.org/developer/F70228/SceneFullCopyBug.webm)

This issue was referenced by blender/blender-addons-contrib@018fe81779

This issue was referenced by blender/blender-addons-contrib@018fe81779e81ad43b16c74969764ae3b71d4b40

This issue was referenced by 018fe81779

This issue was referenced by 018fe81779e81ad43b16c74969764ae3b71d4b40

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 018fe81779.

Closed by commit 018fe81779.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38269
No description provided.