Fix T38269: scene full copy in mesh edit or sculpt mode did not copy mesh edits.