source/blender/editors/include/ED_sculpt.h
@@ -44,7 +44,6 @@ struct rcti;
 void ED_operatortypes_sculpt(void);
 void sculpt_get_redraw_planes(float planes[4][4], struct ARegion *ar,
                               struct RegionView3D *rv3d, struct Object *ob);
-void ED_sculpt_force_update(struct bContext *C);
 void ED_sculpt_get_average_stroke(struct Object *ob, float stroke[3]);
 int ED_sculpt_minmax(struct bContext *C, float min[3], float max[3]);
 int ED_sculpt_mask_layers_ensure(struct Object *ob,
