source/blender/editors/include/ED_util.h
@@ -46,6 +46,8 @@ struct Mesh;
 void    ED_editors_init(struct bContext *C);
 void    ED_editors_exit(struct bContext *C);
 
+void    ED_editors_flush_edits(struct bContext *C, bool for_render);
+
 /* ************** Undo ************************ */
 
 /* undo.c */
